[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/resources/icons/icon_play.svg" type="Texture" id=1]
[ext_resource path="res://ui/resources/icons/icon_previous_song.svg" type="Texture" id=2]
[ext_resource path="res://ui/resources/icons/icon_next_song.svg" type="Texture" id=3]
[ext_resource path="res://ui/PlaybackButtons.gd" type="Script" id=4]

[node name="PlaybackButtons" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 2.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviousSongButton" type="Button" parent="."]
margin_right = 37.0
margin_bottom = 660.0
icon = ExtResource( 2 )

[node name="PlayPauseButton" type="Button" parent="."]
margin_left = 41.0
margin_right = 69.0
margin_bottom = 660.0
icon = ExtResource( 1 )

[node name="NextSongButton" type="Button" parent="."]
margin_left = 73.0
margin_right = 110.0
margin_bottom = 660.0
icon = ExtResource( 3 )

[connection signal="pressed" from="PreviousSongButton" to="." method="_on_PreviousSongButton_pressed"]
[connection signal="pressed" from="PlayPauseButton" to="." method="_on_PlayPauseButton_pressed"]
[connection signal="pressed" from="NextSongButton" to="." method="_on_NextSongButton_pressed"]
